--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
 Python-pyhsm NEWS -- History of user-visible changes.          -*- outline -*-
 
+* Version 1.0.4l (released 2015-08-24)
+
+** Documentation is now in asciidoc format.
+
+** yhsm-yubikey-ksm: Fix bug when the same public ID occured for multiple
+keyhandles.
+
 * Version 1.0.4k (released 2014-09-18)
 
 ** yhsm-db-import, yhsm-db-export: Fix syntax error.
