--- a/maintainer-scripts/README
+++ b/maintainer-scripts/README
@@ -2,10 +2,8 @@ All scripts should be run from the main directory.
 
 make-release.sh
 ---------------
-Creates and signs a release, placing the resulting files in 
-../releases/ (outside the parent directory). Prior to invoking 
-this script, a signed tag should have been made using the version
-as name.
+Creates, tags and signs a release, placing the resulting files in 
+the dist/ directory.
 
 generate_html.sh
 -------------
