--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-pyhsm (1.1.0-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Dain Nilsson <dain@yubico.com>  Fri, 08 Jan 2016 11:03:12 +0100
+
 python-pyhsm (1.0.4l-2) unstable; urgency=low
 
   * Let yhsm-daemon depend on python-daemon.  Closes: #801764.
