--- a/man/yhsm-init-oath-token.1
+++ b/man/yhsm-init-oath-token.1
@@ -15,7 +15,7 @@ yhsm-init-oath-token \(hy Tool to add an OATH token to the \fIyhsm-validation-se
 [\fIoptions\fR]
 
 .SH DESCRIPTION
-Use this tool to add OATH token entrys to the \fIyhsm-validation-server\fR\|(1) database.
+Use this tool to add OATH token entries to the \fIyhsm-validation-server\fR\|(1) database.
 
 .SH OPTIONS
 .PP
