--- a/man/yhsm-keystore-unlock.1
+++ b/man/yhsm-keystore-unlock.1
@@ -1,4 +1,4 @@
-.\" Copyright (c) 2011-2014 Yubico AB
+.\" Copyright (c) 2011-2016 Yubico AB
 .\" See the file COPYING for license statement.
 .\"
 .de URL
@@ -17,7 +17,7 @@ yhsm-keystore-unlock \(hy Unlock the keystore in a YubiHSM
 .SH DESCRIPTION
 In versions of the YubiHSM before 1.0, the YubiHSM could be protected
 using a 'HSM password'. The YubiHSM would unlock it's cryptographic functions
-if the correct password was given, but it was a simple comparision test.
+if the correct password was given, but it was a simple comparison test.
 
 In YubiHSM 1.0, the password was changed into an actual key that was used to
 decrypt the contents of the YubiHSM internal key store, which was then AES-256
