--- a/doc/README
+++ b/doc/README
@@ -3,27 +3,15 @@ This is the documentation directory of pyhsm.
 ----
 API documentation
 ----
-
-In doc/html/ you will find API documentation generated from pydoc in the
-source tree at the time of release.
-
-If you have checked out the source code from the repository rather than
-downloaded an official release, you can generate the HTML API documentation
-yourself by installing 'epydoc' (package 'python-epydoc' in Debian/Ubuntu)
-and then executing the ./maintainer-scripts/generate_html.sh script.
-
-----
-Assorted usage documentation
-----
-
-Please note that there might be more updated documentation available online.
+You can generate HTML API documentation from the source code by using epydoc.
+See the epydoc documentation for instructions on doing so.
 
 
 ----
 Low level documentation
 ----
-The reference manual is available from
+The reference manual for the YubiHSM is available from
 
-    http://www.yubico.com/yubihsm/
+    https://www.yubico.com/yubihsm/
 
 The file doc/YubiHSM_if.h details all the available commands of the YubiHSM.
